--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <span></span>
                     <span></span>
                 </span>
-                <ul class="d-flex  justify-content-center text-center gap-4 m-0 p-0 smView">
+                <ul class="d-flex align-items-center justify-content-center text-center gap-4 m-0 p-0 smView">
                     <li><a href="#" class="fs-16 fw-400 ff_Rubik text_lightblack m-0 p-0">About</a></li>
                     <li><a href="#" class="fs-16 fw-400 ff_Rubik text_lightblack m-0 p-0">Features</a></li>
                     <li><a href="#" class="fs-16 fw-400 ff_Rubik text_lightblack m-0 p-0">Pricing</a></li>
@@ -43,7 +43,7 @@
                             class="fs-16 fw-500 ff_Rubik text_lightblack m-0 p-0 d-lg-none d-block">sign&nbsp;up</a>
                     </li>
                     <li><button
-                            class="sign_up d-lg-none d-flex align-items-center justify-content-center text-center fs-16 fw-500 ff_Rubik text_red ml-sm-26">sign&nbsp;up</button>
+                            class="sign_up d-lg-none d-flex align-items-center justify-content-center text-center fs-16 fw-500 ff_Rubik text_red">sign&nbsp;up</button>
                     </li>
                 </ul>
                 <ul class="d-flex align-items-center gap-5 m-0 p-0">
@@ -201,7 +201,8 @@
             </div>
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-6 col-sm-6 col-12 mt-sm-50 mb-sm-50">
-                    <div class="box_1 ml-sm-14">
+                    <div
+                        class="box_1 d-flex align-items-center justify-content-center flex-column text-center ml-sm-28">
                         <div class="d-flex align-items-center justify-content-center text-center flex-column pt-5">
                             <span><svg width="146" height="167" viewBox="0 0 146 167" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -424,7 +425,8 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="d-flex align-items-center justify-content-center text-center flex-column pt-100">
+                        <div
+                            class="d-flex align-items-center justify-content-center text-center flex-column pt-145 mb-5">
                             <h3 class="fs-25 fw-500 ff_Rubik text_black m-0 p-0">Free</h3>
                             <div class="pt-4">
                                 <button class="Select">Select</button>
@@ -433,7 +435,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-12 mt-sm-50 mb-sm-50">
-                    <div class="box_1 ml-sm-14">
+                    <div
+                        class="box_1 d-flex align-items-center justify-content-center flex-column text-center ml-sm-28">
                         <div class="d-flex align-items-center justify-content-center text-center flex-column pt-5">
                             <span><svg width="146" height="167" viewBox="0 0 146 167" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -665,7 +668,8 @@
                                 <p class="fs-14 fw-400 ff_Rubik text_gray m-0 p-0">Connect&nbsp;Anyware</p>
                             </div>
                         </div>
-                        <div class="d-flex align-items-center justify-content-center text-center flex-column pt-55">
+                        <div
+                            class="d-flex align-items-center justify-content-center text-center flex-column pt-100 mb-5">
                             <h3 class="fs-25 fw-500 ff_Rubik text_black m-0 p-0">$9 <span
                                     class="fs-25 fw-400 ff_Rubik text_lightblack m-0 p-0"> / mo</span></h3>
                             <div class="pt-4">
@@ -675,7 +679,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-12 mt-md-50 mt-lg-50 mb-sm-50">
-                    <div class="box_1 ml-sm-14">
+                    <div
+                        class="box_1 d-flex align-items-center justify-content-center flex-column text-center ml-sm-28">
                         <div class="d-flex align-items-center justify-content-center text-center flex-column pt-5">
                             <span><svg width="146" height="167" viewBox="0 0 146 167" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -916,7 +921,8 @@
                                 <p class="fs-14 fw-400 ff_Rubik text_gray m-0 p-0">Get&nbsp;New&nbsp;Features</p>
                             </div>
                         </div>
-                        <div class="d-flex align-items-center justify-content-center text-center flex-column pt-13">
+                        <div
+                            class="d-flex align-items-center justify-content-center text-center flex-column pt-55 mb-5">
                             <h3 class="fs-25 fw-500 ff_Rubik text_black m-0 p-0">$12 <span
                                     class="fs-25 fw-400 ff_Rubik text_lightblack m-0 p-0"> / mo</span></h3>
                             <div class="pt-4">
