--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@
                         <p class=" fs-16 fw-400 ff_Rubik text_gray pt-3 center-md-text m-0 p-0">Let's subscribe with us
                             and find the fun.</p>
                     </div>
-                    <button class="fs-16 fw-400 ff_Rubik text_white Subscribe_Now mb-md-5">Subscribe&nbsp;Now</button>
+                    <button class="fs-16 fw-400 ff_Rubik text_white Subscribe_Now Subscribe-md-mb">Subscribe&nbsp;Now</button>
                 </div>
             </div>
         </div>
