Btn hover add update

--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
                     <h4 class="section_2_max_w fs-35 fw-500 ff_Rubik text_black m-0 p-0">We Provide Many Features You
                         Can Use</h4>
                     <p class="section_2_para_max_w fs-16 fw-400 ff_Rubik text_gray m-0 p-0 pt-5 pb-3">You can explore
-                        the
-                        features that we provide with fun and have their own functions each feature.</p>
+                        the features that we provide with fun and have their own functions each feature.</p>
                     <div class="d-flex align-items-center gap-2 py-2">
                         <span><svg width="21" height="21" viewBox="0 0 21 21" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
